# code-test

./: .gitignore
Ipolot/: a.out  hs071_nlp.cpp  readme.md
OOQP/: CMakeLists.txt  example.cpp
OSQP/: CMakeLists.txt  eigen_resize_test.cpp  eigen_value.cpp  main.cpp
RVO/: a.out  rvo.cpp
ampl/: admm_g.mod  admm_vs.mod  admm_z.mod  cfs_ADMM_acc_case1.m  d2poly.m  hs071.mod  solve.sh
boost_geometry/: CMakeLists.txt  boost_geometry_test.cpp
carsim_frenet/: carsim2frenet.py
ceres_test/: CMakeLists.txt  basic_test.cpp  non_linear_opt.cpp
class_test/: a.out  virtual_class.cpp
code_test/: a.out  class_overwrite.cpp  empalce_back_test.cpp  nothing_test.cpp  resezie_test.cpp  static_test.cpp  tcp_tes.c  test_add.cpp  upper_test.cpp  vector_test.cpp
csapp/: a.out  chapter_1.cpp
gurobi/: CMakeLists.txt  dense_c++.cpp  qcp.cpp  qp_diff_flat.cpp
lamba_cppad_test/: CMakeLists.txt  Makefile  test.cpp
math_gl_test/: a.out  mgl_exe1  mgl_exe1.cpp  mgl_exe2.cpp
nlopt_test/: CMakeLists.txt  a.out  norm_test.cpp
random_test/: a.out  random.cpp
reference_test/: a.out  main.cpp  pointer.cpp  test2.cpp
scripts/: auto_reserve.py
sympy/: diff_clc.py
template/: uqniue_ptr.cpp
test_tan/: tan_test.py
thread_pool/: a.out  main.cpp  task_base.cpp  thread_pool.cpp  thread_pool.hpp
thread_test/: a.out  cond_v.cpp  produce_consume.cpp  thread.cpp
yaml-cpp/: CMakeLists.txt  main.cpp
